--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,14 @@
+
 server:
-  port: 8087
+  port: 8086
 spring:
   datasource:
+    password: root
     username: root
-    password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/newerstu?useSSL=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://127.0.0.1:3306/demo?useSSL=false&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8
+    #driver-class-name: com.mysql.cj.jdbc.Driver
 mybatis:
   type-aliases-package: com.newer.emp.domain
   mapper-locations: classpath:com/newer/emp/mapper/*.xml
-
-
 
 
